# excel-chatbot

./: .gitignore  README.md  pyproject.toml  👋_Hello.py
data/: sample_1.xlsx  sample_2.xlsx  sample_3.csv
pages/: 1_🤖_Question_Answering.py  2_📁_Data_Uploader.py
utils/: file_procesing.py  question_answering.py
